# ai-voiceprotecter-backend

./: .env.example  .gitignore  API.md  ARCHITECTURE.md  DATABASE.md  Makefile  README.md  go.mod  go.sum
ai/: Dockerfile  README.md  pyproject.toml  requirements.txt
ai/app/: main.py
ai/app/core/: config.py  llm_base.py  llm_client.py  merge.py  openai_client.py  qwen_client.py  voiceprint_engine.py  whisper_engine.py
ai/app/routers/: __init__.py  analyze.py  classify.py  healthz.py  transcribe.py  voiceprint.py
ai/app/schemas/: analyze.py
ai/models/: README.md
ai/tests/: __init__.py  test_analyze.py
deploy/: docker-compose.yml  nginx.conf
deploy/minio/: buckets.sh
deploy/postgres/: init.sql
docs/: README.md  erd.mmd  openapi.yaml
docs/sequence/: analyze.mmd  login.mmd
gateway/: Dockerfile  go.mod  go.sum
gateway/migrations/: 0001_init.down.sql  0002_blacklist.down.sql  0003_knowledge.up.sql  0005_samples_recordings.down.sql  0005_samples_recordings.up.sql  0006_devices_audit.down.sql  0007_appeals_apply.down.sql  0007_appeals_apply.up.sql  0008_voice_models.down.sql  0009_agent_config.down.sql  0009_agent_config.up.sql  0010_business_completeness.down.sql  0010_business_completeness.up.sql  0010_emergency_contacts.up.sql  0011_emergency_contacts.up.sql  (+3 more)
migrations/: 0001_init.up.sql  0002_blacklist.up.sql  0004_rules_risk.down.sql  0004_rules_risk.up.sql  0006_devices_audit.up.sql  0008_voice_models.up.sql  0011_emergency_contacts.down.sql  0012_me_profile.down.sql  0013_dispatch_credentials.down.sql  0014_drop_unused_soft_delete.down.sql
(+33 files in other folders)
